force-app/main/default/objects/TCP_OrderLineItem__c/TCP_OrderLineItem__c.object-meta.xml
<CustomObject>
    <description>This object hold the line item details</description>
    <label>Order Line Item</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Order Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>