force-app/main/default/objects/TCP_OrderLineItem__c/fields/Cancelled_in_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_in_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To capture if the order line item has been cancelled when order was in submitted state.</description>
    <inlineHelpText>To capture if the order line item has been cancelled when order was in submitted state.</inlineHelpText>
    <label>Cancelled in Submitted</label>
    <type>Checkbox</type>
</CustomField>