force-app/main/default/objects/TCP_OrderLineItem__c/fields/Contract_No__c.field-meta.xml
<CustomField>
    <fullName>Contract_No__c</fullName>
    <label>Contract No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>