force-app/main/default/objects/TCP_OrderLineItem__c/fields/Delivery_Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Collection_Date__c</fullName>
    <label>Delivery/Collection Date</label>
    <type>Date</type>
</CustomField>