force-app/main/default/objects/TCP_OrderLineItem__c/fields/GSAP_Bol_Delivery__c.field-meta.xml
<CustomField>
    <fullName>GSAP_Bol_Delivery__c</fullName>
    <description>Bol/Delivery value from Chemical GSAP P31</description>
    <label>GSAP Bol/Delivery</label>
    <length>10</length>
    <type>Text</type>
</CustomField>