force-app/main/default/objects/TCP_OrderLineItem__c/fields/GSAP_Dispatch_Date__c.field-meta.xml
<CustomField>
    <fullName>GSAP_Dispatch_Date__c</fullName>
    <description>Dispatch Date from chemical GSAP P31</description>
    <label>GSAP Dispatch Date</label>
    <type>Date</type>
</CustomField>