force-app/main/default/objects/TCP_OrderLineItem__c/fields/GSAP_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>GSAP_Due_Date__c</fullName>
    <description>Due Date value from Chemical GSAP P31</description>
    <label>GSAP Due Date</label>
    <type>Date</type>
</CustomField>