force-app/main/default/objects/TCP_OrderLineItem__c/fields/GSAP_Goods_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>GSAP_Goods_Issue_Date__c</fullName>
    <description>Goods Issue Date value comes from Chemical GSAP P31</description>
    <label>GSAP Goods Issue Date</label>
    <type>Date</type>
</CustomField>