force-app/main/default/objects/TCP_OrderLineItem__c/fields/GSAP_Goods_Issue_Status__c.field-meta.xml
<CustomField>
    <fullName>GSAP_Goods_Issue_Status__c</fullName>
    <description>Goods Issue status value comes from Chemical GSAP P31</description>
    <label>GSAP Goods Issue Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>