force-app/main/default/objects/TCP_OrderLineItem__c/fields/GSAP_Goods_Issue_Unit__c.field-meta.xml
<CustomField>
    <fullName>GSAP_Goods_Issue_Unit__c</fullName>
    <description>Goods Issue Unit from Chemical GSAP P31</description>
    <label>GSAP Goods Issue Unit</label>
    <length>3</length>
    <type>Text</type>
</CustomField>