force-app/main/default/objects/TCP_OrderLineItem__c/fields/GSAP_Goods_Issue_Value__c.field-meta.xml
<CustomField>
    <fullName>GSAP_Goods_Issue_Value__c</fullName>
    <description>Goods Issue value comes from Chemical GSAP P31</description>
    <label>GSAP Goods Issue Value</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>