force-app/main/default/objects/TCP_OrderLineItem__c/fields/GSAP_Mode_of_Transport_ID__c.field-meta.xml
<CustomField>
    <fullName>GSAP_Mode_of_Transport_ID__c</fullName>
    <description>Mode of Transport ID value comes from chemical GSAP P31</description>
    <label>GSAP Mode of Transport ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>