force-app/main/default/objects/TCP_OrderLineItem__c/fields/Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status__c</fullName>
    <description>A - Not yet processed
B - Partially processed
C - Completely processed</description>
    <label>Invoice Status</label>
    <length>2</length>
    <type>Text</type>
</CustomField>