force-app/main/default/objects/TCP_OrderLineItem__c/fields/MaterialNumber__c.field-meta.xml
<CustomField>
    <fullName>MaterialNumber__c</fullName>
    <label>MaterialNumber</label>
    <length>20</length>
    <type>Text</type>
</CustomField>