force-app/main/default/objects/TCP_OrderLineItem__c/fields/Netweight_Unitprice__c.field-meta.xml
<CustomField>
    <fullName>Netweight_Unitprice__c</fullName>
    <label>Netweight Unitprice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>TO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>