force-app/main/default/objects/TCP_OrderLineItem__c/fields/New_delivery__c.field-meta.xml
<CustomField>
    <fullName>New_delivery__c</fullName>
    <label>New delivery</label>
    <length>10</length>
    <type>Text</type>
</CustomField>