force-app/main/default/objects/TCP_OrderLineItem__c/fields/New_dispatch_date__c.field-meta.xml
<CustomField>
    <fullName>New_dispatch_date__c</fullName>
    <label>New dispatch date</label>
    <type>Date</type>
</CustomField>