force-app/main/default/objects/TCP_OrderLineItem__c/fields/New_GI_date__c.field-meta.xml
<CustomField>
    <fullName>New_GI_date__c</fullName>
    <label>New GI date</label>
    <type>Date</type>
</CustomField>