force-app/main/default/objects/TCP_OrderLineItem__c/fields/New_GI_quantity__c.field-meta.xml
<CustomField>
    <fullName>New_GI_quantity__c</fullName>
    <label>New GI quantity</label>
    <length>10</length>
    <type>Text</type>
</CustomField>