force-app/main/default/objects/TCP_OrderLineItem__c/fields/New_GI_status__c.field-meta.xml
<CustomField>
    <fullName>New_GI_status__c</fullName>
    <label>New GI status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>