force-app/main/default/objects/TCP_OrderLineItem__c/fields/New_GI_unit__c.field-meta.xml
<CustomField>
    <fullName>New_GI_unit__c</fullName>
    <label>New GI unit</label>
    <length>5</length>
    <type>Text</type>
</CustomField>