force-app/main/default/objects/TCP_OrderLineItem__c/fields/New_loading_date__c.field-meta.xml
<CustomField>
    <fullName>New_loading_date__c</fullName>
    <label>New loading date</label>
    <type>Date</type>
</CustomField>