force-app/main/default/objects/TCP_OrderLineItem__c/fields/New_Mot_Id__c.field-meta.xml
<CustomField>
    <fullName>New_Mot_Id__c</fullName>
    <label>New Mot Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>