force-app/main/default/objects/TCP_OrderLineItem__c/fields/New_Order_type__c.field-meta.xml
<CustomField>
    <fullName>New_Order_type__c</fullName>
    <description>To capture GSAP order type of redirect order</description>
    <inlineHelpText>To capture GSAP order type of redirect order</inlineHelpText>
    <label>New Order type</label>
    <length>5</length>
    <type>Text</type>
</CustomField>