force-app/main/default/objects/TCP_OrderLineItem__c/fields/New_SO__c.field-meta.xml
<CustomField>
    <fullName>New_SO__c</fullName>
    <label>New SO</label>
    <length>10</length>
    <type>Text</type>
</CustomField>