force-app/main/default/objects/TCP_OrderLineItem__c/fields/New_so_line_item_no__c.field-meta.xml
<CustomField>
    <fullName>New_so_line_item_no__c</fullName>
    <label>New so line item no</label>
    <length>10</length>
    <type>Text</type>
</CustomField>