force-app/main/default/objects/TCP_OrderLineItem__c/fields/Order_Line_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Status__c</fullName>
    <label>Order Line Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>