force-app/main/default/objects/TCP_OrderLineItem__c/fields/Other_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Other_Instruction__c</fullName>
    <label>Other Instruction</label>
    <type>TextArea</type>
</CustomField>