force-app/main/default/objects/TCP_OrderLineItem__c/fields/Return_delivery__c.field-meta.xml
<CustomField>
    <fullName>Return_delivery__c</fullName>
    <label>Return delivery</label>
    <length>10</length>
    <type>Text</type>
</CustomField>