force-app/main/default/objects/TCP_OrderLineItem__c/fields/Return_GI__c.field-meta.xml
<CustomField>
    <fullName>Return_GI__c</fullName>
    <label>Return GI</label>
    <length>10</length>
    <type>Text</type>
</CustomField>