force-app/main/default/objects/TCP_OrderLineItem__c/fields/Return_Loading_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Loading_Date__c</fullName>
    <description>To capture Return Order Loading Date</description>
    <inlineHelpText>To capture Return Order Loading Date</inlineHelpText>
    <label>Return Loading Date</label>
    <type>Date</type>
</CustomField>