force-app/main/default/objects/TCP_OrderLineItem__c/fields/Return_order__c.field-meta.xml
<CustomField>
    <fullName>Return_order__c</fullName>
    <label>Return order</label>
    <length>10</length>
    <type>Text</type>
</CustomField>