force-app/main/default/objects/TCP_OrderLineItem__c/fields/Return_Order_type__c.field-meta.xml
<CustomField>
    <fullName>Return_Order_type__c</fullName>
    <description>To capture GSAP order type for return order</description>
    <inlineHelpText>To capture GSAP order type for return order</inlineHelpText>
    <label>Return Order type</label>
    <length>5</length>
    <type>Text</type>
</CustomField>