force-app/main/default/objects/TCP_OrderLineItem__c/fields/Return_SO_line_item_no__c.field-meta.xml
<CustomField>
    <fullName>Return_SO_line_item_no__c</fullName>
    <description>To capture return order&apos;s GSAP line item No</description>
    <inlineHelpText>To capture return order&apos;s GSAP line item No</inlineHelpText>
    <label>Return SO line item no</label>
    <length>10</length>
    <type>Text</type>
</CustomField>