force-app/main/default/objects/TCP_OrderLineItem__c/fields/Shell_Material_No__c.field-meta.xml
<CustomField>
    <fullName>Shell_Material_No__c</fullName>
    <label>Shell Material No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>