force-app/main/default/objects/TCP_OrderLineItem__c/fields/Shipping_Point__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Point__c</fullName>
    <label>Shipping Point</label>
    <length>30</length>
    <type>Text</type>
</CustomField>