force-app/main/default/objects/TCP_OrderLineItem__c/fields/Shipping_Point_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Point_Name__c</fullName>
    <label>Shipping Point Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>