force-app/main/default/objects/TCP_OrderLineItem__c/fields/Shipping_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Postcode__c</fullName>
    <label>Shipping Postcode</label>
    <length>30</length>
    <type>Text</type>
</CustomField>