force-app/main/default/objects/TCP_OrderLineItem__c/fields/SICC_Code__c.field-meta.xml
<CustomField>
    <fullName>SICC_Code__c</fullName>
    <label>SICC Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>