force-app/main/default/objects/TCP_OrderLineItem__c/fields/Special_Price__c.field-meta.xml
<CustomField>
    <fullName>Special_Price__c</fullName>
    <label>Special Price</label>
    <length>250</length>
    <type>Text</type>
</CustomField>