force-app/main/default/objects/TCP_OrderLineItem__c/fields/TCP_Modify_Cancel_Status__c.field-meta.xml
<CustomField>
    <fullName>TCP_Modify_Cancel_Status__c</fullName>
    <description>To capture the Modification/Cancellation status of the order line items.</description>
    <inlineHelpText>To capture the Modification/Cancellation status of the order line items.</inlineHelpText>
    <label>Modification/Cancellation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Modified</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>No Change</fullName>
                <default>true</default>
                <label>No Change</label>
            </value>
            <value>
                <fullName>Modification</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>